# sasl-xoauth2

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  ChangeLog  FUNDING.yml  README.md
debian/: changelog  control  copyright  gbp.conf  install  rules  sasl-xoauth2.links  sasl-xoauth2.postinst
debian/patches/: argparse-bool-device-flow.patch  make-argparse-manpage-optional.patch  series
docs/: CMakeLists.txt  sasl-xoauth2.conf.5.md
packaging-scripts/: build-debian.sh  build-ubuntu.sh
packaging/debian-buster/: changelog
packaging/debian-jessie/: changelog  control  copyright
packaging/debian-stretch/: changelog
packaging/ubuntu-bionic/: changelog
packaging/ubuntu-eoan/: changelog  control  rules
packaging/ubuntu-eoan/patches/: series  token-store-copy-elision.diff
packaging/ubuntu-focal/: changelog
scripts/: CMakeLists.txt  build-deb.sh  build-ubuntu.sh  get-initial-gmail-tokens.py  get-initial-outlook-tokens.py  postfix-sasl-xoauth2-update-ca-certs  sasl-xoauth2-token-tool  sasl-xoauth2-tool  sasl-xoauth2-tool.in  update-ca-certificates.sh
src/: CMakeLists.txt  client.cc  client.h  config.cc  config.h  http.cc  http.h  install-lib-symlink.cmake.in  log.cc  log.h  module.cc  module.h  sasl-xoauth2.conf  test_config.cc  token_store.cc  token_store.h  xoauth2_test.cc
